# Pumpensteuerung

./: .env.example  .gitignore  CLAUDE.md  INSTALL.md  OTA-UPDATE-SYSTEM.md  PROJECT_OVERVIEW.md  STATUS.md  TODO.md  V20_MODBUS_REGISTER.md  deploy.sh  docker-compose.yml  docker-stack.yml  partitions.csv  platformio.ini
.claude/: settings.local.json
.github/workflows/: build.yml  pi-release.yml
docker/backend/: Dockerfile  auth.js  haDiscovery.js  irrigation.js  irrigation.test.js  mqttClient.js  package-lock.json  package.json  presetLock.js  presets.js  pressureCtrl.js  restApi.js  server.js  state.js  timeguard.js  websocketServer.js
docker/frontend/: .gitignore  app.js  concept-irrigation.html  index.html  manifest.json  package-lock.json  styles.css  sw.js  tailwind.config.js
docker/nginx/: Dockerfile  docker-entrypoint.sh  nginx.conf
handoff/: README.md  globals.css  layout-snippet.tsx  tailwind.config.ts
pi/backend/: .env.example  README.md  pyproject.toml
pi/backend/app/: config.py  ha_discovery.py  irrigation.py  irrigation_wizard.py  main.py  modbus_rtu.py  modbus_tcp.py  mqtt_client.py  persistence.py  presets.py  pressure_ctrl.py  state.py  storage.py  timeguard.py  weather_provider.py  ws.py
pi/backend/app/api/: __init__.py  deps.py  routes.py
pi/backend/tests/: test_irrigation_wizard.py
pi/frontend/: README.md  (+4 more)
src/: config.h  fallback_ctrl.cpp  fallback_ctrl.h  main.cpp  modbus_tcp.cpp  modbus_tcp.h  modbus_v20.cpp  modbus_v20.h  mqtt_ha.cpp  mqtt_ha.h  secrets.h.example  sensors.cpp  sensors.h  web_index.h  webserver.cpp  webserver.h
(+45 files in other folders)
